Am modificat raspunsulurile  la 1 teste HEHE

--- a/test2m.html
+++ b/test2m.html
@@ -29,7 +29,7 @@
         <div class="cuti1">
       <h2 class="aleg">1. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Care este mușchiul responsabil pentru extensia gambei?</p>
-      <p class="rasr" data-correct="A">A) Biceps femural</p>
+      <p class="rasr" data-correct="B">A) Biceps femural</p>
       <p class="rasr" >B) Triceps sural</p>
       <p class="rasr" >C) Deltoid</p>
       <p class="rasr" >D) Trapez</p>
@@ -39,7 +39,7 @@
         <div class="cuti1">
       <h2 class="aleg">2. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Ce tip de mușchi este implicat în digestie?</p>
-      <p class="rasr" data-correct="A">A) Mușchiul scheletic</p>
+      <p class="rasr" data-correct="B">A) Mușchiul scheletic</p>
       <p class="rasr" >B) Mușchiul neted</p>
       <p class="rasr" >C) Mușchiul cardiac</p>
       <p class="rasr" >D) Mușchiul extensor</p>
@@ -52,10 +52,10 @@
         <div class="coloane">
           <h3 class="coloaneenume">Coloana A</h3>
           <div class="scris2">
-            <p class="optiuni" >1.Excitabilitate<input type="text" id="match1" class="match-box" placeholder="Ex: B"></p>
+            <p class="optiuni" >1.Extensibilitate<input type="text" id="match1" class="match-box" placeholder="Ex: B"></p>
             <p class="optiuni">2.Contractilitate<input type="text" id="match2" class="match-box" placeholder="Ex: B"></p>
             <p class="optiuni">3.Elasticitate<input type="text" id="match3" class="match-box" placeholder="Ex: B"></p>
-            <p class="optiuni">4.Extensibilitate<input type="text" id="match4" class="match-box" placeholder="Ex: B"></p>
+            <p class="optiuni">4.Excitabilitate<input type="text" id="match4" class="match-box" placeholder="Ex: B"></p>
           </div>
         </div>
         <div class="coloane">
@@ -74,7 +74,7 @@
       <h2 class="aleg">4. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Care este sursa principală de energie pentru contracțiile musculare?</p>
       <p class="rasr" >A) ADN</p>
-      <p class="rasr" data-correct="B">B) Lipide</p>
+      <p class="rasr" data-correct="C">B) Lipide</p>
       <p class="rasr" >C) ATP</p>
       <p class="rasr" >D) Enzime</p>
       <button class="verifca">✔ Verifica</button>
@@ -83,8 +83,8 @@
      <div class="cuti1">
       <h2 class="aleg">5. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Cum se numește procesul prin care mușchii devin mai mari și mai puternici?</p>
-      <p class="rasr" data-correct="A">A) Atrofie</p>
-      <p class="rasr" >B) Hipertrofie</p>
+      <p class="rasr" data-correct="A">A) Hipertrofie</p>
+      <p class="rasr" >B) Atrofie</p>
       <p class="rasr" >C) Tetanos</p>
       <p class="rasr" >D) Crampă musculară</p>
       <button class="verifca">✔ Verifica</button>
@@ -93,9 +93,9 @@
         <div class="cuti1">
       <h2 class="aleg">6. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Ce mușchi este situat în partea anterioară a coapsei</br> și este folosit pentru extensia genunchiului?</p>
-      <p class="rasr" data-correct="A">A) Triceps sural</p>
-      <p class="rasr" >B) Quadriceps</p>
-      <p class="rasr" >C) Biceps femural</p>
+      <p class="rasr" data-correct="C">A) Triceps sural</p>
+      <p class="rasr" >B) Biceps femural</p>
+      <p class="rasr" >C) Quadriceps</p>
       <p class="rasr" >D) Trapez</p>
       <button class="verifca">✔ Verifica</button>
       <div class="linie"></div>
@@ -103,10 +103,10 @@
     <div class="cuti1">
       <h2 class="aleg">7. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Ce rol are mioglobina în mușchi?</p>
-      <p class="rasr" data-correct="A">A) Depozitează glicogen</p>
+      <p class="rasr" data-correct="D">A) Controlează impulsurile nervoase</p>
       <p class="rasr" >B) Transportă oxigenul</p>
       <p class="rasr" >C) Produce ATP</p>
-      <p class="rasr" >D) Controlează impulsurile nervoase</p>
+      <p class="rasr" >D) Depozitează glicogen</p>
       <button class="verifca">✔ Verifica</button>
       <div class="linie"></div>
      </div>
@@ -156,6 +156,6 @@
   </div>
 
   <script src="scripthub.js"></script>
-  <script src="scriptexerciti.js"></script>
+  <script src="scriptexercitiT2M.js"></script>
 </body>
 </html>
