Am terminat testele cu  raspunsuri

--- a/test3m.html
+++ b/test3m.html
@@ -29,7 +29,7 @@
         <div class="cuti1">
       <h2 class="aleg">1. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Care este cel mai lung mușchi din corpul uman?</p>
-      <p class="rasr" data-correct="A">A) Quadriceps</p>
+      <p class="rasr" data-correct="B">A) Quadriceps</p>
       <p class="rasr" >B) Sartorius</p>
       <p class="rasr" >C) Trapez</p>
       <p class="rasr" >D) Biceps femural</p>
@@ -39,8 +39,8 @@
         <div class="cuti1">
       <h2 class="aleg">2. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Ce proteină este esențială pentru contracția musculară?</p>
-      <p class="rasr" data-correct="A">A) Hemoglobina</p>
-      <p class="rasr" >B) Actina</p>
+      <p class="rasr" data-correct="A">A) Actina</p>
+      <p class="rasr" >B) Hemoglobina</p>
       <p class="rasr" >C) Colagenul</p>
       <p class="rasr" >D) Keratina</p>
       <button class="verifca">✔ Verifica</button>
@@ -93,7 +93,7 @@
         <div class="cuti1">
       <h2 class="aleg">6. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Ce tip de mușchi formează peretele inimii?</p>
-      <p class="rasr" data-correct="A">A) Mușchi neted</p>
+      <p class="rasr" data-correct="C">A) Mușchi neted</p>
       <p class="rasr" >B) Mușchi scheletic</p>
       <p class="rasr" >C) Mușchi cardiac</p>
       <p class="rasr" >D) Mușchi mixt</p>
@@ -103,10 +103,10 @@
     <div class="cuti1">
       <h2 class="aleg">7. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Cum se numește fenomenul prin care mușchii produc căldură?</p>
-      <p class="rasr" data-correct="A">A) Termogeneza</p>
+      <p class="rasr" data-correct="D">A) Miofibriliza</p>
       <p class="rasr" >B) Metabolism</p>
       <p class="rasr" >C) Atrofie</p>
-      <p class="rasr" >D) Miofibriliza</p>
+      <p class="rasr" >D) Termogeneza</p>
       <button class="verifca">✔ Verifica</button>
       <div class="linie"></div>
      </div>
@@ -136,7 +136,7 @@
       <div class="cuti1">
       <h2 class="aleg">9. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Ce organ controlează direct activitatea mușchilor scheletici?</p>
-      <p class="rasr" data-correct="A">A) Inima</p>
+      <p class="rasr" data-correct="B">A) Inima</p>
       <p class="rasr" >B) Creierul</p>
       <p class="rasr" >C) Ficatul</p>
       <p class="rasr" >D) Rinichii</p>
@@ -156,6 +156,6 @@
   </div>
 
   <script src="scripthub.js"></script>
-  <script src="scriptexerciti.js"></script>
+  <script src="scriptexecitiT3M.JS"></script>
 </body>
 </html>
