--- a/test4m.html
+++ b/test4m.html
@@ -39,7 +39,7 @@
         <div class="cuti1">
       <h2 class="aleg">2. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Muschi al gatului este</p>
-      <p class="rasr" data-correct="A">A) piramidal</p>
+      <p class="rasr" data-correct="D">A) piramidal</p>
       <p class="rasr" >B) pielos</p>
       <p class="rasr" >C) oblic</p>
       <p class="rasr" >D) trapez</p>
@@ -74,7 +74,7 @@
       <h2 class="aleg">4. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Dintre muschii abdominali fac parte</p>
       <p class="rasr" >A) marele dorsal</p>
-      <p class="rasr" data-correct="B">B) croitor</p>
+      <p class="rasr" data-correct="C">B) croitor</p>
       <p class="rasr" >C) oblic intern</p>
       <p class="rasr" >D) dintat</p>
       <button class="verifca">✔ Verifica</button>
@@ -83,7 +83,7 @@
      <div class="cuti1">
       <h2 class="aleg">5. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Bicepsul brahial este muschi al</p>
-      <p class="rasr" data-correct="A">A) abdomenului</p>
+      <p class="rasr" data-correct="B">A) abdomenului</p>
       <p class="rasr" >B) membrului superior</p>
       <p class="rasr" >C) spatelui</p>
       <p class="rasr" >D) mimicii</p>
@@ -103,7 +103,7 @@
     <div class="cuti1">
       <h2 class="aleg">7. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Muschi al umarului este</p>
-      <p class="rasr" data-correct="A">A) bicepsul femural</p>
+      <p class="rasr" data-correct="C">A) bicepsul femural</p>
       <p class="rasr" >B) oblicul extern</p>
       <p class="rasr" >C) deltoidul</p>
       <p class="rasr" >D) trapezul</p>
@@ -146,7 +146,7 @@
      <div class="cuti1">
       <h2 class="aleg">10. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Muschi al toracelui este</p>
-      <p class="rasr" data-correct="A">A) semitendinos</p>
+      <p class="rasr" data-correct="B">A) semitendinos</p>
       <p class="rasr" >B) dintat</p>
       <p class="rasr" >C) oblicul extern</p>
       <p class="rasr" >D) trapez</p>
@@ -156,6 +156,6 @@
   </div>
 
   <script src="scripthub.js"></script>
-  <script src="scriptexerciti.js"></script>
+  <script src="scriptexercitiT4M.js"></script>
 </body>
 </html>
