--- a/test5m.html
+++ b/test5m.html
@@ -29,7 +29,7 @@
         <div class="cuti1">
       <h2 class="aleg">1. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Care este principala funcție a mușchilor scheletici?</p>
-      <p class="rasr" data-correct="A">A) Reglarea temperaturii corpului</p>
+      <p class="rasr" data-correct="B">A) Reglarea temperaturii corpului</p>
       <p class="rasr" >B) Asigurarea posturii și mișcărilor voluntare</p>
       <p class="rasr" >C) Digestia alimentelor</p>
       <p class="rasr" >D) Secreția de hormoni</p>
@@ -39,7 +39,7 @@
         <div class="cuti1">
       <h2 class="aleg">2. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Ce proprietate a mușchilor permite răspunsul la un stimul?</p>
-      <p class="rasr" data-correct="A">A) Contractilitatea</p>
+      <p class="rasr" data-correct="C">A) Contractilitatea</p>
       <p class="rasr" >B) Extensibilitatea</p>
       <p class="rasr" >C) Excitabilitatea</p>
       <p class="rasr" >D) Elasticitatea</p>
@@ -74,7 +74,7 @@
       <h2 class="aleg">4. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Ce unitate structurală și funcțională se află între două membrane Z?</p>
       <p class="rasr" >A) Miofibrila</p>
-      <p class="rasr" data-correct="B">B) Miozină</p>
+      <p class="rasr" data-correct="C">B) Miozină</p>
       <p class="rasr" >C) Sarcomer</p>
       <p class="rasr" >D) Actină</p>
       <button class="verifca">✔ Verifica</button>
@@ -83,7 +83,7 @@
      <div class="cuti1">
       <h2 class="aleg">5. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Care dintre următoarele tipuri de contracții musculare presupune creșterea</br> tensiunii fără modificarea lungimii mușchiului?</p>
-      <p class="rasr" data-correct="A">A) Izotonică</p>
+      <p class="rasr" data-correct="B">A) Izotonică</p>
       <p class="rasr" >B) Izometrică</p>
       <p class="rasr" >C) Auxotonică</p>
       <p class="rasr" >D) Tetanică</p>
@@ -93,7 +93,7 @@
         <div class="cuti1">
       <h2 class="aleg">6. Alegeți răspunsul corect:</h2>
       <p class="intrebare">În ce fază a metabolismului muscular predomină procesul anaerob?</p>
-      <p class="rasr" data-correct="A">A) După primele 2 minute de efort</p>
+      <p class="rasr" data-correct="C">A) După primele 2 minute de efort</p>
       <p class="rasr" >B) Între 5 și 10 minute de efort</p>
       <p class="rasr" >C) În primele 45-90 de secunde de efort intens</p>
       <p class="rasr" >D) Doar în repaus</p>
@@ -103,7 +103,7 @@
     <div class="cuti1">
       <h2 class="aleg">7. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Ce fenomen electric este caracteristic mușchilor în timpul contracției?</p>
-      <p class="rasr" data-correct="A">A) Reflexul miotatic</p>
+      <p class="rasr" data-correct="B">A) Reflexul miotatic</p>
       <p class="rasr" >B) Potențialul de acțiune propagat</p>
       <p class="rasr" >C) Tetanosul incomplet</p>
       <p class="rasr" >D) Miografia</p>
@@ -136,7 +136,7 @@
       <div class="cuti1">
       <h2 class="aleg">9. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Care dintre următoarele afirmatii este corectă despre tonusul muscular?</p>
-      <p class="rasr" data-correct="A">A) Este o stare de tensiune temporară a mușchilor</p>
+      <p class="rasr" data-correct="C">A) Este o stare de tensiune temporară a mușchilor</p>
       <p class="rasr" >B) Apare doar în timpul contracției active</p>
       <p class="rasr" >C) Este reflex și dispare după denervare</p>
       <p class="rasr" >D) Se manifestă doar la nivelul inimii</p>
@@ -146,7 +146,7 @@
      <div class="cuti1">
       <h2 class="aleg">10. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Ce tip de contracție apare atunci când un mușchi își modifică lungimea, dar menține o tensiune constantă?</p>
-      <p class="rasr" data-correct="A">A) Izometrică</p>
+      <p class="rasr" data-correct="B">A) Izometrică</p>
       <p class="rasr" >B) Izotonică</p>
       <p class="rasr" >C) Auxotonică</p>
       <p class="rasr" >D) Secusă</p>
@@ -156,6 +156,6 @@
   </div>
 
   <script src="scripthub.js"></script>
-  <script src="scriptexerciti.js"></script>
+  <script src="scriptexercitiT5M.js"></script>
 </body>
 </html>
