--- a/test6m.html
+++ b/test6m.html
@@ -29,7 +29,7 @@
         <div class="cuti1">
       <h2 class="aleg">1. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Ce determină oboseala musculară?</p>
-      <p class="rasr" data-correct="A">A) Creșterea nivelului de glicogen muscular</p>
+      <p class="rasr" data-correct="B">A) Creșterea nivelului de glicogen muscular</p>
       <p class="rasr" >B) Acumularea de acid lactic și scăderea pH-ului intracelular</p>
       <p class="rasr" >C) Scăderea cantității de oxigen în sânge</p>
       <p class="rasr" >D) Creșterea temperaturii corpului</p>
@@ -39,7 +39,7 @@
         <div class="cuti1">
       <h2 class="aleg">2. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Care dintre următoarele afirmații despre febra musculară este corectă?</p>
-      <p class="rasr" data-correct="A">A) Apare în timpul efortului fizic intens</p>
+      <p class="rasr" data-correct="C">A) Apare în timpul efortului fizic intens</p>
       <p class="rasr" >B) Este cauzată de acumularea de toxine în sânge</p>
       <p class="rasr" >C) Se manifestă la 2 – 48 de ore după efort</p>
       <p class="rasr" >D) Dispare definitiv doar prin tratament medicamentos</p>
@@ -83,7 +83,7 @@
      <div class="cuti1">
       <h2 class="aleg">5. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Ce poate provoca o contractură musculară dureroasă (crampe)?</p>
-      <p class="rasr" data-correct="A">A) Efort fizic moderat</p>
+      <p class="rasr" data-correct="C">A) Efort fizic moderat</p>
       <p class="rasr" >B) Creșterea nivelului de glicogen muscular</p>
       <p class="rasr" >C) O activitate musculară prelungită</p>
       <p class="rasr" >D) Hidratarea excesivă</p>
@@ -93,7 +93,7 @@
         <div class="cuti1">
       <h2 class="aleg">6. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Ce reprezintă o întindere musculară?</p>
-      <p class="rasr" data-correct="A">A) O contracție musculară puternică și voluntară</p>
+      <p class="rasr" data-correct="B">A) O contracție musculară puternică și voluntară</p>
       <p class="rasr" >B) O leziune cauzată de întinderea excesivă a mușchiului</p>
       <p class="rasr" >C) O ruptură completă a țesutului osos</p>
       <p class="rasr" >D) O reacție alergică la efort fizic</p>
@@ -136,7 +136,7 @@
       <div class="cuti1">
       <h2 class="aleg">9. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Ce proces are loc în cazul miopatiilor?</p>
-      <p class="rasr" data-correct="A">A) Mușchii devin mai puternici și rezistenți</p>
+      <p class="rasr" data-correct="B">A) Mușchii devin mai puternici și rezistenți</p>
       <p class="rasr" >B) Țesutul muscular este înlocuit progresiv cu țesut sclero-adipos</p>
       <p class="rasr" >C) Crește semnificativ volumul mușchilor</p>
       <p class="rasr" >D) Crește capacitatea de efort muscular</p>
@@ -146,7 +146,7 @@
      <div class="cuti1">
       <h2 class="aleg">10. Alegeți răspunsul corect:</h2>
       <p class="intrebare">În ce perioadă a vieții pot apărea miopatiile?</p>
-      <p class="rasr" data-correct="A">A) Exclusiv la persoanele peste 50 de ani</p>
+      <p class="rasr" data-correct="C">A) Exclusiv la persoanele peste 50 de ani</p>
       <p class="rasr" >B) Doar la nou-născuți</p>
       <p class="rasr" >C) În copilărie, pubertate sau în jurul vârstei de 20 de ani</p>
       <p class="rasr" >D) Doar la sportivi de performanță</p>
@@ -156,6 +156,6 @@
   </div>
 
   <script src="scripthub.js"></script>
-  <script src="scriptexerciti.js"></script>
+  <script src="scriptexecritiT6M.js"></script>
 </body>
 </html>
