am adaugat lectia muschii membrului superior

--- a/mussup.html
+++ b/mussup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>schelete</title>
-    <link rel="stylesheet" href="clasmus.css">
+    <link rel="stylesheet" href="mussup.css">
 </head>
 <body>
     <header class="header">
@@ -39,7 +39,7 @@
                 <a href="#">muschii capului</a>
                 <a href="#">muschii gatului</a>
                 <a href="#">muschii trunchiului</a>
-                <a href="mussup.html">muschii membrelor superioare</a>
+                <a href="#">muschii membrelor superioare</a>
                 <a href="#">muschii membrelor inferioare</a>
               </div>
           </div>
@@ -63,71 +63,59 @@
 
 
     </div>
- <div class="titluc">
-    <h1>Clasificarea mușchilor scheletici</h1>
- </div>
- <img class="titlupoz" src="mushcelt.png">
+    
 
-<div class="cutie1">
-    <h1>Sistemul muscular</h1>
-    <p> este format din mușchi, care sunt organele active ale mișcării. Acest rol este realizat de către musculatura scheletică — somatică — având în structura sa țesut muscular striat.</p>
-</div>
-<div class="linie1">
-</div>
- <div class="linie2">
- </div>
- <p class="p1">Mușchii au forme variate. Se descriu:</p>
 
+
+<div class="titl">
+    <h1>Mușchii membrului superior</h1>
+</div>
+<img class="titlu1" src="muschifiz.png">
 <div class="cutie2">
-    <p>mușchi fusiformi:
+    <p>Sunt grupați în mușchii:
         <br>
-        --biceps;
+        -umărului;
         <br>
-        --triceps;</p>
-        <img class="biceps" src="bicepstriceps.png">
-</div>
-<div class="cutie3">
-    <p>mușchi triunghiulari:
+        -brațului; 
         <br>
-        --piramidalul abdomenului;</p>
-        <img class="tring" src="tring.png"> 
+        -antebrațului;
+        <br>
+        -mâinii; </p>
 </div>
 
+<div class="cutie3">
+    <img class="brat" src="bratt.png">
+</div>
 
 <div class="cutie4">
-    <p>mușchi de formă patrulateră: 
+    <p>Principalul mușchi al umărului, deltoidul, este situat imediat sub piele și ridică membrul superior până la orizontală, realizând abducția brațului.</p>
+   <img class="adln" src="adln.png">
+    
+</div>
+<div class="cutie5">
+    <p>La nivelul brațului distingem:
         <br>
-        --marele drept abdominal;
+        Anterior: mușchiul biceps brahial, mușchiul brahial și mușchiul coracobrahial.
         <br>
-        --marele dorsal;</p>
-        <img class="abdominal" src="abdominal.png">
-        <img class="spate" src="dorsal.png">
+        Posterior: mușchiul triceps brahial.</p>
+</div>
+<div class="cutie6">
+<img class="biceps" src="bicepstriceps.png">
+</div>
+<div class="cutie7">
+    <p>Mușchii anteriori ai antebrațului sunt flexori ai antebrațului și ai mâinii, precum și pronatori ai mâinii. Unii dintre ei sunt și flexori ai degetelor.</p>
+</div>
+<img class="poza1" src="brat2.png">
+
+<div class="cutie8">
+<p>Mușchii posteriori și laterali ai antebrațului sunt extensori ai antebrațului, mâinii și degetelor.</p>
+<img class="poza2" src="brat3.png">
 </div>
 
-<img class="diaf" src="diaf.jpg">
-<p class="p2">mușchi în formă de cupolă:
-    <br> 
-    --diafragma;</p>
-
-<p class="p3">mușchi în formă de trapez:
-    <br>
-    --mușchiul trapez;</p>
-
-<img class="img1" src="trap.png">
-
-
-<div class="ochi">
-    <p>mușchi circulari:
-        <br>
-        -- orbicularul buzelor;
-        <br>
-        -- cel al pleoapelor, sfincterele.</p>
-</div>
-
-
-<div class="pozaoc">
-    <img class="ochipoz" src="ochi1.png">
-</div>
+<div class="cutie9">
+       <p>Mâna posedă un aparat muscular complex, având mușchi doar pe fața sa palmară și în spațiile interosoase.</p>
+<img class="poza3" src="brat4.png">
+    </div>
 
 
 
