AM BAGAT CHATBOT AI MUAUAHAHA

--- a/career.html
+++ b/career.html
@@ -79,7 +79,33 @@
       </a>
       </div>
     </section>
+    <div class="chat-icon" id="chat-icon">
+      <img src="messengergood.png" alt="Chat" width="80" height="80">
+    </div>
+    
+  
+    <div class="chat-container" id="chat-container">
+      <div class="chat-header">
+          <img src="docbot.png" alt="bot" width="50" height="50">
+        <div class="chat-title">Biobot</div>
+        <div class="chat-controls">
+          <button id="fullscreen-btn" class="control-btn"><img src="fullscreen.png" alt="Fullscreen" width="16" height="16"></button>
+          <button id="minimize-btn" class="control-btn"><img src="minimize.png" alt="Minimize" width="16" height="16"></button>
+          <button id="close-btn" class="control-btn"><img src="close.png" alt="Close" width="16" height="16"></button>
+        </div>
+      </div>
+      <div class="chat-messages" id="chat-messages">
+       
+        <div class="bot-message">Bun venit la Bioline cu ce te pot ajuta!</div>
+      </div>
+      <div class="chat-input-container">
+        <textarea id="user-input" placeholder="Scrie un mesaj..."></textarea>
+        <button id="send-btn"><img src="arrow.png" class="arrow" alt="Send" width="10" height="15"></button>
+      </div>
+    </div>
+
       <script src="careerScript.js"></script>
       <script src="script.js"></script>
+      <script src="chatbot.js"></script>
 </body>
 </html>
