webografie aduagata, doar lectile  mai sunt de adaugat

--- a/informatiibib.html
+++ b/informatiibib.html
@@ -16,6 +16,28 @@
     </header>
     <h1>Inforamtii</h1>
 
+    <div class="container">
+        <div class="row">
+            <div class="col-3">
+                <div class="card">
+                    <h3>Informatile de la Lectii</h3>
+                    <p>Manualul de biologie:<a href="https://manuale.edu.ro/manuale/Clasa%20a%20XI-a/Biologie/Corint1/A367.pdf">https://manuale.edu.ro/manuale/Clasa%20a%20XI-a/Biologie/Corint1/A367.pdf</a></p>
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="card">
+                    <h3>Informatiile despre salarii</h3>
+                    <p>Site cu salari(estimative):<a href="https://www.paylab.ro/informatii-calculator-salarii">https://www.paylab.ro/informatii-calculator-salarii</a></p>
+                </div>
+            </div>
+            <div class="col-3">
+                <div class="card">
+                    <h3>Pozele</h3>
+                    <p>Majoritatea pozelor sunt luate dupa: <a href="https://www.biodigital.com/">https://www.biodigital.com/</a></p>
+                </div>
+            </div>
+        </div>
+
     <script src="scripthub.js"></script>
 </body>
 </html>
