am bagat butoanele corecte

--- a/fiziologie.html
+++ b/fiziologie.html
@@ -36,10 +36,10 @@
         <div class="capitol">
             <button class="capitol-btn">Principalele grupe de muschi</button>
            <div class="lectii">
-                <a href="#">muschii capului</a>
-                <a href="#">muschii gatului</a>
-                <a href="#">muschii trunchiului</a>
-                <a href="#">muschii membrelor superioare</a>
+                <a href="cap.html">muschii capului</a>
+                <a href="gat.html">muschii gatului</a>
+                <a href="mustrun.html">muschii trunchiului</a>
+                <a href="mussup.html">muschii membrelor superioare</a>
                 <a href="#">muschii membrelor inferioare</a>
               </div>
           </div>
@@ -47,7 +47,7 @@
           <div class="capitol">
             <button class="capitol-btn">fiziologia muschilor scheletici</button>
            <div class="lectii">
-                <a href="#">fiziologia</a>
+                <a href="fiziologie.html">fiziologia</a>
                 <a href="#">propietati</a>
                 <a href="#">manifestarile contractiei musculare</a>
               </div>
@@ -56,7 +56,7 @@
         <div class="capitol">
             <button class="capitol-btn">notiuni de igiena si patologie</button>
            <div class="lectii">
-                <a href="#">notiuni de igiena si patologie</a>
+                <a href="patologiemuschi.html">notiuni de igiena si patologie</a>
               </div>
           </div>
 
