--- a/rolpro.html
+++ b/rolpro.html
@@ -39,7 +39,7 @@
           <button class="capitol-btn">3.Scheletul Membrelor</button>
          <div class="lectii">
               <a href="memsup.html">Memebrele Superioare</a>
-              <a href="#">Membrele Inferioare</a>
+              <a href="scheletmeminf.html">Membrele Inferioare</a>
             </div>
         </div>
 
@@ -57,7 +57,7 @@
           <button class="capitol-btn">Articulațiile</button>
          <div class="lectii">
           <a href="articulati.html">Articulațiile</a>
-              <a href="#">kazane ce pun aici1:(</a>
+              
             </div>
         </div>
 
@@ -65,7 +65,7 @@
           <button class="capitol-btn">6.Notiuni de patologie</button>
          <div class="lectii">
           <a href="patologie.html">Noțiuni elementare de igienă și patologie</a>
-              <a href="#">kazane ce pun aici1:(</a>
+              
             </div>
         </div>
 
