--- a/patologiemuschi.html
+++ b/patologiemuschi.html
@@ -35,7 +35,7 @@
                 <a href="gat.html">muschii gatului</a>
                 <a href="mustrun.html">muschii trunchiului</a>
                 <a href="mussup.html">muschii membrelor superioare</a>
-                <a href="#">muschii membrelor inferioare</a>
+                <a href="muschi membri inferior.html">muschii membrelor inferioare</a>
               </div>
           </div>
           <div class="capitol">
