Am corectat cuvinte

--- a/exerciti.html
+++ b/exerciti.html
@@ -15,7 +15,7 @@
         </div>
     </header>
 
-    <h1>Exerciti</h1>
+    <h1>Exercitii</h1>
 
     <div class="back1"></div>
     <video  class="back"  src="sange.mp4" autoplay loop muted playsinline class type="video/mp4"></video>
@@ -44,7 +44,7 @@
             </div>
             </div>
          <div class="cutie fade-in1" class="active" >
-        <div class="schelete fade-in1" tabindex="0" >Schelete</div>
+        <div class="schelete fade-in1" tabindex="0" >Schelet</div>
      </div>
      </section>
      <div class="carousel-container">
