--- a/homepage.html
+++ b/homepage.html
@@ -34,7 +34,7 @@
       <a href="schelet.html"><h1 class="fade-in">Aflați despre craniu</h1></a>
       <div class="line2 fade-in"></div>
 
-      <a href="schelettrunchi.html"><h2 class="fade-in">Aflați despre vertebre</h2></a>
+      <a href="schelettrunchi.html"><h2 class="fade-in">Aflați despre triunchi</h2></a>
       <div class="line3 fade-in"></div>
 
       <a href="scheletele triunchiul.html"><h3 class="fade-in">Aflați despre vertebre</h3></a>
