--- a/meniu.html
+++ b/meniu.html
@@ -27,7 +27,7 @@
           <li><a href="career.html">Cariere</a>
             <p class="link-description">Descoperi-ți viitoarea carieră în medicină</p>
           </li>
-          <li><a href="exerciti.html">Exerciţi</a>
+          <li><a href="exerciti.html">Teste</a>
             <p class="link-description">Testează-ți cunoștințele</p>
           </li>
         </ul>
