--- a/muschi membri inferior.html
+++ b/muschi membri inferior.html
@@ -40,7 +40,7 @@
                 <a href="gat.html">muschii gatului</a>
                 <a href="mustrun.html">muschii trunchiului</a>
                 <a href="mussup.html">muschii membrelor superioare</a>
-                <a href="#">muschii membrelor inferioare</a>
+                <a href="muschi membri inferior.html">muschii membrelor inferioare</a>
               </div>
           </div>
         
@@ -99,6 +99,9 @@
 
 
       <section class="partea2">
+          <img src="tibial.jpg" alt="tibial" class="tibia">
+          <img src="exetensor degeteor.png" alt="exetensor" class="extensor">
+          <img src="flexor degete.png" alt="flexor" class="flexor">
         <h2 style="font-size: 3.4rem; padding-left: 300px;">Mușchii gambei</h2>
           <p style="font-size: 2.9rem; font-weight: 600; padding-left:400px;">Sunt grupați în două loje:</p>
           <p style="font-size: 2.5rem; font-weight: 600; padding-left: 350px;">1. Loja anterolaterală</p>
