--- a/test1s.html
+++ b/test1s.html
@@ -39,7 +39,7 @@
         <div class="cuti1">
       <h2 class="aleg">2. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Câte perechi de coaste are scheletul uman?</p>
-      <p class="rasr" data-correct="A">A) 10</p>
+      <p class="rasr" data-correct="B">A) 10</p>
       <p class="rasr" >B) 12</p>
       <p class="rasr" >C) 7</p>
       <p class="rasr" >D) 14</p>
@@ -74,7 +74,7 @@
       <h2 class="aleg">4. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Ce rol are coloana vertebrală?</p>
       <p class="rasr" >A) Protejează măduva spinării</p>
-      <p class="rasr" data-correct="D">B) Susține corpul</p>
+      <p class="rasr" data-correct="A">B) Susține corpul</p>
       <p class="rasr" >C) Permite mișcarea trunchiului</p>
       <p class="rasr" >D) Toate cele de mai sus</p>
       <button class="verifca">✔ Verifica</button>
@@ -146,7 +146,7 @@
      <div class="cuti1">
       <h2 class="aleg">10. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Ce curbură a coloanei are concavitatea posterioară?</p>
-      <p class="rasr" data-correct="B">A) Lordoză</p>
+      <p class="rasr" data-correct="A">A) Lordoză</p>
       <p class="rasr" >B) Cifoză</p>
       <p class="rasr" >C) Scolioză</p>
       <p class="rasr" >D) Niciuna dintre cele de mai sus</p>
