--- a/test2s.html
+++ b/test2s.html
@@ -74,7 +74,7 @@
       <h2 class="aleg">4. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Ce os se află în tendonul cvadricepsului femural?</p>
       <p class="rasr" >A) Rotula</p>
-      <p class="rasr" data-correct="A">B) Humerus</p>
+      <p class="rasr" data-correct="C">B) Humerus</p>
       <p class="rasr" >C) Tibia</p>
       <p class="rasr" >D) Sternul</p>
       <button class="verifca">✔ Verifica</button>
@@ -93,7 +93,7 @@
         <div class="cuti1">
       <h2 class="aleg">6. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Ce oase se află în scheletul brațului?</p>
-      <p class="rasr" data-correct="B">A) Radius</p>
+      <p class="rasr" data-correct="A">A) Radius</p>
       <p class="rasr" >B) Humerus</p>
       <p class="rasr" >C) Ulna</p>
       <p class="rasr" >D) Toate cele de mai sus</p>
@@ -136,7 +136,7 @@
       <div class="cuti1">
       <h2 class="aleg">9. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Ce perechi de coaste se articulează direct cu sternul?</p>
-      <p class="rasr" data-correct="C">A) Perechile VIII, IX, X</p>
+      <p class="rasr" data-correct="A">A) Perechile VIII, IX, X</p>
       <p class="rasr" >B) Ultimele 2 perechi</p>
       <p class="rasr" >C) Primele 7 perechi</p>
       <p class="rasr" >D) Niciuna</p>
