--- a/test3s.html
+++ b/test3s.html
@@ -39,7 +39,7 @@
         <div class="cuti1">
       <h2 class="aleg">2. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Ce regiune a coloanei prezintă lordoză?</p>
-      <p class="rasr" data-correct="A">A) Cervicală și lombară</p>
+      <p class="rasr" data-correct="B">A) Cervicală și lombară</p>
       <p class="rasr" >B) Toracală și sacrală</p>
       <p class="rasr" >C) Coccigiană</p>
       <p class="rasr" >D) Toate regiunile</p>
@@ -74,7 +74,7 @@
       <h2 class="aleg">4. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Care este cel mai lung os din corpul uman?</p>
       <p class="rasr" >A) Femurul</p>
-      <p class="rasr" data-correct="B">B) Humerusul</p>
+      <p class="rasr" data-correct="A">B) Humerusul</p>
       <p class="rasr" >C) Tibia</p>
       <p class="rasr" >D) Radiusul</p>
       <button class="verifca">✔ Verifica</button>
@@ -103,7 +103,7 @@
     <div class="cuti1">
       <h2 class="aleg">7. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Câte vertebre toracale are coloana vertebrală?</p>
-      <p class="rasr" data-correct="A">A) 7</p>
+      <p class="rasr" data-correct="C">A) 7</p>
       <p class="rasr" >B) 5</p>
       <p class="rasr" >C) 12</p>
       <p class="rasr" >D) 4</p>
