--- a/test4s.html
+++ b/test4s.html
@@ -146,7 +146,7 @@
      <div class="cuti1">
       <h2 class="aleg">10. Alegeți răspunsul corect:</h2>
       <p class="intrebare">Ce mineral este esențial în compoziția osoasă?</p>
-      <p class="rasr" data-correct="A">A) Fier</p>
+      <p class="rasr" data-correct="C">A) Fier</p>
       <p class="rasr" >B) Sodiu</p>
       <p class="rasr" >C) Fosfat de calciu</p>
       <p class="rasr" >D) Magneziu</p>
