am adaugat lectia propietatile muschilor

--- a/clasmus.html
+++ b/clasmus.html
@@ -48,7 +48,7 @@
             <button class="capitol-btn">fiziologia muschilor scheletici</button>
            <div class="lectii">
                 <a href="fiziologie.html">fiziologia</a>
-                <a href="#">propietati</a>
+                <a href="propietati.html">propietati</a>
                 <a href="#">manifestarile contractiei musculare</a>
               </div>
           </div>
@@ -56,7 +56,7 @@
         <div class="capitol">
             <button class="capitol-btn">notiuni de igiena si patologie</button>
            <div class="lectii">
-                <a href="#">notiuni de igiena si patologie</a>
+                <a href="patologiemuschi.html">notiuni de igiena si patologie</a>
               </div>
           </div>
 
