--- a/patologiemuschi.html
+++ b/patologiemuschi.html
@@ -42,7 +42,7 @@
             <button class="capitol-btn">fiziologia muschilor scheletici</button>
            <div class="lectii">
                 <a href="fiziologie.html">fiziologia</a>
-                <a href="#">propietati</a>
+                <a href="propietati.html">propietati</a>
                 <a href="#">manifestarile contractiei musculare</a>
               </div>
           </div>     
