--- a/scheletcap.html
+++ b/scheletcap.html
@@ -63,7 +63,7 @@
           <div class="capitol">
             <button class="capitol-btn">6.Notiuni de patologie</button>
            <div class="lectii">
-            <a href="patologie.html">Noțiuni elementare de igienă și patologie</a>
+            <a href="patologie.html">Noțiuni elementare de igienă și patologie</a>a
               </div>
           </div>
 
