--- a/gat.html
+++ b/gat.html
@@ -48,7 +48,7 @@
             <button class="capitol-btn">fiziologia muschilor scheletici</button>
            <div class="lectii">
                 <a href="fiziologie.html">fiziologia</a>
-                <a href="#">propietati</a>
+                <a href="propietati.html">propietati</a>
                 <a href="#">manifestarile contractiei musculare</a>
               </div>
           </div>
