--- a/informatiibib.html
+++ b/informatiibib.html
@@ -14,13 +14,13 @@
             <span></span>
         </div>
     </header>
-    <h1>Inforamtii</h1>
+    <h1>Informatii</h1>
 
     <div class="container">
         <div class="row">
             <div class="col-3">
                 <div class="card">
-                    <h3>Informatile de la Lectii</h3>
+                    <h3>Informatiile de la Lectii</h3>
                     <p>Manualul de biologie:<a href="https://manuale.edu.ro/manuale/Clasa%20a%20XI-a/Biologie/Corint1/A367.pdf">https://manuale.edu.ro/manuale/Clasa%20a%20XI-a/Biologie/Corint1/A367.pdf</a></p>
                 </div>
             </div>
