--- a/homepage.html
+++ b/homepage.html
@@ -23,7 +23,7 @@
       <div class="banner fade-in">
           <h1>Bun Venit la Bioline</h1>
       </div>
-      <h2 class="fade-in">Învață anatomia și fiziologia aparatului locomotor</h2>
+      <h2 class="fade-in">Învață anatomia și fiziologia aparatului locomotor </br> Elev:Colici-Mare Andrei </br>Professor:Atia-Mihaela Fodor</h2>
       <div class="line fade-in"></div>
   </section>
 
