--- a/strct-musch.html
+++ b/strct-musch.html
@@ -48,7 +48,7 @@
                 <a href="gat.html">muschii gatului</a>
                 <a href="mustrun.html">muschii trunchiului</a>
                 <a href="mussup.html">muschii membrelor superioare</a>
-                <a href="#">muschii membrelor inferioare</a>
+                <a href="muschi membri inferior.html">muschii membrelor inferioare</a>
               </div>
           </div>
         
@@ -57,7 +57,7 @@
            <div class="lectii">
                 <a href="fiziologie.html">fiziologia</a>
                 <a href="propietati.html">propietati</a>
-                <a href="#">manifestarile contractiei musculare</a>
+                <a href="Manifestarile.html">manifestarile contractiei musculare</a>
               </div>
           </div>
         
