--- a/mussup.html
+++ b/mussup.html
@@ -48,8 +48,8 @@
             <button class="capitol-btn">fiziologia muschilor scheletici</button>
            <div class="lectii">
                 <a href="fiziologie.html">fiziologia</a>
-                <a href="#">propietati</a>
-                <a href="#">manifestarile contractiei musculare</a>
+                <a href="propietati.html">propietati</a>
+                <a href="Manifestarile.html">manifestarile contractiei musculare</a>
               </div>
           </div>
         
