final pana la database

--- a/homepage.html
+++ b/homepage.html
@@ -52,7 +52,7 @@
       <h2 class="fade-in">mușchii corpului</h2>
       <div class="line7 fade-in"></div>
       <div class="line8 fade-in"></div>
-      <a href="#"><button class="button fade-in">Afla mai multe</button></a>
+      <a href="muschi membri inferior.html"><button class="button fade-in">Afla mai multe</button></a>
   </section>
 
 
