--- a/signup.html
+++ b/signup.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign in</title>
-    <link rel="stylesheet" href="signin.css">
+    <title>Sign Up</title>
+    <link rel="stylesheet" href="signup.css">
 </head>
 <body>
     <img src="loig.PNG" alt="muschi" class="background">
@@ -18,25 +18,23 @@
     <div class="container">
         <div class="head">
         <img src="user.png" alt="icon-user" class="user">
-        <h1>Sign In</h1>
+        <h1>Sign Up</h1>
         </div>
         <form id="signin-form">
             <input class="username" type="text" id="username" placeholder="Username" required>
+            <input class="password" type="password" id="password" placeholder="Email" required>
             <input class="password" type="password" id="password" placeholder="Password" required>
+            
             <button class="login" type="submit">Login</button>
 
         </form>
         <div class="info">
-        <p class="message1"><a href="#">Ai uitat parola?</a></p>
-        <p class="message2">Nu ai cont pe Bioline? <a href="signup.html">Sign Up</a></p>
-     </div>
     <a href="homepage.html"><h2>←Inapoi la hompage</h2></a>    
         <div class="linie"></div>
         <div class="cerc1"></div>
         <div class="cerc2"></div>
         <div class="cerc3"></div>
     </div>
-
 
     <script src="script.js"></script>
 </body>
