--- a/signin.html
+++ b/signin.html
@@ -27,7 +27,7 @@
 
         </form>
         <div class="info">
-        <p class="message1"><a href="#">Ai uitat parola?</a></p>
+        <p class="message1"><a href="uitatparola.html">Ai uitat parola?</a></p>
         <p class="message2">Nu ai cont pe Bioline? <a href="signup.html">Sign Up</a></p>
      </div>
     <a href="homepage.html"><h2>←Inapoi la hompage</h2></a>    
