--- a/signup.html
+++ b/signup.html
@@ -22,7 +22,7 @@
         </div>
         <form id="signin-form">
             <input class="username" type="text" id="username" placeholder="Username" required>
-            <input class="password" type="password" id="password" placeholder="Email" required>
+            <input class="password" type="email" id="email" placeholder="Email" required>
             <input class="password" type="password" id="password" placeholder="Password" required>
             
             <button class="login" type="submit">Login</button>
